--- a/package.json
+++ b/package.json
@@ -4,14 +4,20 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "cypress": "^12.17.4",
+    "cypress-mochawesome-reporter": "^3.5.1",
     "cypress-xpath": "^2.0.1",
     "prettier": "3.0.2"
+  },
+  "dependencies": {
+    "axios": "^1.5.0",
+    "jest": "^29.6.4",
+    "jsonschema": "^1.4.1"
   }
 }
